--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,19 +27,19 @@ services:
     networks:
       - elastic
   
-  mysql:
-    image: mysql:8.0.18
-    container_name: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - "3366:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: disfruta
-    volumes:
-      - ./data/mysql:/var/lib/mysql
-    networks:
-      - elastic
+  #mysql:
+  #  image: mysql:8.0.18
+  #  container_name: mysql
+  #  command: --default-authentication-plugin=mysql_native_password
+  #  ports:
+  #    - "3366:3306"
+  #  environment:
+  #    MYSQL_ROOT_PASSWORD: root
+  #    MYSQL_DATABASE: disfruta
+  #  volumes:
+  #    - ./data/mysql:/var/lib/mysql
+  #  networks:
+  #    - elastic
 
   redis:
     image: redis:alpine
