--- a/docker-compose-all.yml
+++ b/docker-compose-all.yml
@@ -9,12 +9,8 @@ services:
       - "node.name=es01"                     # Sets node name
       - "network.host=0.0.0.0"               # Sets binding ip to all
       - "discovery.type=single-node" 
-      - "xpack.security.enabled=false"       # Disables xpack security
-      - "xpack.monitoring.enabled=false"     # Disables xpack monitoring
-      - "xpack.watcher.enabled=false"        # Disables xpack watcher
-      - "xpack.ml.enabled=false"             # Disables xpack machine learning
       - "bootstrap.memory_lock=true"         # Disables memory swap
-      - "ES_JAVA_OPTS=-Xms1024m -Xmx1024m"   # Sets allocated memory
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"   # Sets allocated memory
     ulimits:
       memlock:
         soft: -1
@@ -22,8 +18,7 @@ services:
     volumes:
       - ./data/elasticsearch:/usr/share/elasticsearch/data
     ports:
-      - "9200:9200"
-      - "9300:9300"
+      - 9200:9200
     networks:
       - elastic
 
@@ -32,7 +27,7 @@ services:
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     ports:
-      - "3366:3306"
+      - 3366:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: disfruta
@@ -46,7 +41,7 @@ services:
     container_name: redis
     command: redis-server
     ports:
-      - "6379:6379"
+      - 6379:6379
     environment:
       REDIS_REPLICATION_MODE: master
     volumes:
@@ -59,7 +54,7 @@ services:
     image: yannart/cerebro:0.8.1
     container_name: cerebro
     ports:
-      - "9000:9000"
+      - 9000:9000
     networks:
       - elastic
 
@@ -67,9 +62,10 @@ services:
     image: docker.elastic.co/kibana/kibana:6.3.1
     container_name: kibana
     ports:
-      - "5601:5601"
+      - 5601:5601
     environment:
       ELASTICSEARCH_URL: http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
     networks:
       - elastic
 
