--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,14 @@ docutils==0.14
 ecdsa==0.13
 elasticsearch-dsl==6.3.1
 elasticsearch==6.3.1
-future==0.17.1
-futures==3.2.0
+future==0.18.2
 idna==2.8
 ipaddress==1.0.22
 jinja2==2.10
 jmespath==0.9.4
 markupsafe==1.1.1
+mysql-connector-python==8.0.22
 pyasn1==0.4.5
-pymysql==0.9.3
 python-dateutil==2.8.0
 python-jose==3.0.1
 requests==2.21.0
