--- a/docker-compose-all.yml
+++ b/docker-compose-all.yml
@@ -2,14 +2,14 @@ version: '2.2'
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
     container_name: elasticsearch
     environment:
-      - "cluster.name=es-docker-cluster"     # Sets cluster name
-      - "node.name=es01"                     # Sets node name
-      - "network.host=0.0.0.0"               # Sets binding ip to all
-      - "discovery.type=single-node" 
-      - "bootstrap.memory_lock=true"         # Disables memory swap
+      - node.name=es01                     # Sets node name
+      - cluster.name=es-docker-cluster     # Sets cluster name
+      - network.host=0.0.0.0               # Sets binding ip to all
+      - discovery.type=single-node 
+      - bootstrap.memory_lock=true         # Disables memory swap
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"   # Sets allocated memory
     ulimits:
       memlock:
@@ -19,11 +19,12 @@ services:
       - ./data/elasticsearch:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+      - 9300:9300
     networks:
       - elastic
 
   mysql:
-    image: mysql:8.0.18
+    image: mysql:8
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     ports:
@@ -36,30 +37,8 @@ services:
     networks:
       - elastic
 
-  redis:
-    image: redis:alpine
-    container_name: redis
-    command: redis-server
-    ports:
-      - 6379:6379
-    environment:
-      REDIS_REPLICATION_MODE: master
-    volumes:
-      - $PWD/data/redis:/var/lib/redis
-      - $PWD/data/redis.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      - elastic
-
-  cerebro:
-    image: yannart/cerebro:0.8.1
-    container_name: cerebro
-    ports:
-      - 9000:9000
-    networks:
-      - elastic
-
   kibana:
-    image: docker.elastic.co/kibana/kibana:6.3.1
+    image: docker.elastic.co/kibana/kibana:7.10.1
     container_name: kibana
     ports:
       - 5601:5601
