--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
     container_name: elasticsearch
     environment:
-      - "cluster.name=es-docker-cluster"     # Sets cluster name
-      - "node.name=es01"                     # Sets node name
-      - "network.host=0.0.0.0"               # Sets binding ip to all
-      - "discovery.type=single-node" 
-      - "bootstrap.memory_lock=true"         # Disables memory swap
+      - node.name=es01                     # Sets node name
+      - cluster.name=es-docker-cluster     # Sets cluster name
+      - network.host=0.0.0.0               # Sets binding ip to all
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true         # Disables memory swap
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"   # Sets allocated memory
     ulimits:
       memlock:
@@ -19,20 +19,18 @@ services:
       - ./data/elasticsearch:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+      - 9300:9300
     networks:
       - elastic
 
-  redis:
-    image: redis:alpine
-    container_name: redis
-    command: redis-server
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.3.1
+    container_name: kibana
     ports:
-      - 6379:6379
+      - 5601:5601
     environment:
-      REDIS_REPLICATION_MODE: master
-    volumes:
-      - $PWD/data/redis:/var/lib/redis
-      - $PWD/data/redis.conf:/usr/local/etc/redis/redis.conf
+      ELASTICSEARCH_URL: http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
     networks:
       - elastic
 
